# JigRBEFitting

./: .gitignore  CMakeLists.txt  JigRBEFitting.cc
include/: LinealSpectra.h  ProtonSpectra.h  Utilities.h
include/RBE_predictions/: Uwes_Spectrum.h
include/lineal_and_LET_fitting/: BWF_Fitter_AlphaBeta.h  BWF_Fitting_Results.h  BiologicalWeightingFunction.h  Ceres_BWF_Fitter.h  Ceres_LET_Fitter.h  H1437_Ceres.h  H1437_LET_Ceres.h  H460Fitting.h  H460_Ceres.h  H460_LET_Ceres.h  LET_Fitter.h  LETdLinearandOffset.h  NonLinearLeastSquaresUtilities.h
include/plotting/: BWF_Plotter.h  SurvivalPlotting.h
include/proton_spectra/: ChaudharySpectra.h  LETCalculator.h  LinealSpectra.h  Martas_Spectrum.h  ProtonSpectra.h  Spectra_For_Erik.h  Utilities.h
include/survival_fitting/: AlphaBeta_Fitter.h  BWF_Fitter.h  BWF_Fitter_AlphaBeta.h  BWF_Fitter_Beta.h  BWF_Plotter.h  BiologicalWeightingFunction.h  (+4 more)
src/: CMakeLists.txt  LETCalculator.cc  LinealSpectra.cc  ProtonSpectra.cc  Utilities.cc
src/RBE_predictions/: Uwes_Spectrum.cc
src/lineal_and_LET_fitting/: BWF_Fitter_AlphaBeta.cc  BWF_Fitting_Results.cc  BiologicalWeightingFunction.cc  Ceres_BWF_Fitter.cc  Ceres_LET_Fitter.cc  H1437_Ceres.cc  H1437_LET_Ceres.cc  H460Fitting.cc  H460_Ceres.cc  H460_LET_Ceres.cc
src/plotting/: BWF_Plotter.cc  SurvivalPlotting.cc
src/proton_spectra/: ChaudharySpectra.cc  LETCalculator.cc  LinealSpectra.cc  Martas_Spectrum.cc  ProtonSpectra.cc  Spectra_For_Erik.cc  Utilities.cc
src/survival_fitting/: AlphaBeta_Fitter.cc  BWF_Fitter.cc  BWF_Fitter_AlphaBeta.cc  BWF_Fitter_Beta.cc  BWF_Plotter.cc  BiologicalWeightingFunction.cc  Ceres_BWF_Fitter.cc  Ceres_Survival_Fitter.cc  H460Fitting.cc  H460_Ceres.cc  LET_Fitter.cc  LETdLinearandOffset.cc  NonLinearLeastSquaresUtilities.cc  SurvivalPlotting.cc  Survival_Fitting_Results.cc
src/survival_fitting/Example/: LinearMultipleTargetSize.example  QuadraticMultipleTargetSize.example
